mergeMaster